# DeukPack

./: .editorconfig  .gitattributes  .gitignore  .npmignore  CHANGELOG.ko.md  CHANGELOG.md  LICENSE  NOTICE  README.ko.md  README.md  RELEASING.ko.md  RELEASING.md  SUPPORT.ko.md  binding.gyp  build_cpp_binding.bat  deuk-ui.config.json  fix_broken_table.py  fix_perf_numbers.py  fix_python_version.py  fix_readme_hyper_dry.py  fix_readme_perf_final.py  jest.config.js  package-lock.json  package.json  release-notice.json  simple_test.thrift  test_meta.thrift  test_meta_100.thrift  test_meta_50.thrift  test_python_gen.ts  test_serialize.js  tmp_modularize.js  tsconfig.json
.deukpack/: deuk-idl-vsix.json  workspace.json
.github/workflows/: build-release.yml  ci.yml  elixir-roundtrip.yml  release.yml  welcome.yml
DeukPack.Core/: DeukPack.Core.SharedCompile.props  DeukPack.Core.csproj
DeukPack.Protocol/: DeukPack.Protocol.SharedCompile.props  DeukPack.Protocol.csproj  NullableAnnotations.netstandard20.cs
benchmarks/: extreme_benchmark.js  native_benchmark.js  performance.js  performance_comparison.js  real_world_benchmark.js  safe_benchmark.js  ultimate_benchmark.js  unity_benchmark.js
bundled/: README.md
dist-test/cpp/: DpJsonProtocol.h  DpPackProtocol.h  DpProtocol.h  RoundtripModel_deuk.cpp  RoundtripModel_deuk.h
dist-test/cs-bridge/: CSharpBridge.csproj  Program.cs
dist-test/js/: generated_deuk.js
docs/: DEUKPACK_GC_PERFORMANCE_MATRIX.ko.md  DEUKPACK_GC_PERFORMANCE_MATRIX.md
examples/: README.ko.md  README.md  basic-usage.ts  openapi_sample.json  pipeline-recursive-include.example.json  pipeline.example.json  pipeline.sample-defineScope-all.json  pipeline.sample.json  sample.csv  sample.psv  sample_schema.json
examples/consumer-cpp/: CMakeLists.txt  README.md  main.cpp
examples/consumer-csharp/: Program.cs  README.md  TutorialSample.csproj
examples/consumer-js/: README.md  package.json
examples/consumer-ts/: README.md  package-lock.json  package.json  tsconfig.json
examples/out_fmt/: out.csv  out.json  out.psv
examples/out_openapi/: openapi_out.json
examples/proto/: hero_saga.proto
examples/sample_idl/: sample.deuk  sample.proto  sample.thrift
examples/scripts/: gen-sample.cmd  gen-sample.sh
examples/write-with-overrides/: README.ko.md  README.md
mcp_test_run/: mcp-server.ts  runner.ts
native/cpp/: CMakeLists.txt  vcpkg.json
native/cpp/include/: binary_reader.h  binary_writer.h  compact_reader.h  compact_writer.h  memory_pool.h  wire_engine.h
native/cpp/src/: binary_reader.cpp  binary_writer.cpp  compact_reader.cpp  compact_writer.cpp  wire_engine.cpp
native/cpp/tests/: wire_roundtrip_test.cpp
scripts/: RoundtripMaster.js  apply-release-notice.js  bootstrap.cmd  bootstrap.js  bootstrap.sh  build_deukpack.js  build_unity_dll.cmd  build_unity_runtime_plugins.js  bundle-vscode-vsix.js  bundled-deuk-idl-vsix.js  changelog-release-slice.js  compile_thrift_deukpack.cmd  copy-codegen-templates.js  deukpack_add.js  deukpack_build_upm.js  deukpack_init.js  dist_csharp.js  export-ai-context.js  fix_elixir.js  init-ensure-deukpack-npm.js  mcp-init-helper.js  migrate_navimesh_into_deuknavigation.py  navimesh_csharp_sync_report.py  npm-postinstall.js  release-check.js  run-cpp-native-tests.js  run-memory-leak-test.js  run-roundtrip-security-perf.js  run_complex_parity_test.js  setup.js  sync-version-artifacts.js  sync_workspace_runtime.js  test-e2e-roundtrip-chain.js  test-fuzz-oom.js  test-roundtrip-all-protocols.js  test_elixir_dialyzer.js  test_forward.js  test_init.js  test_multi_pass_simulation.js  test_verify.js  (+1 more)
scripts/idl-convert/: smoke-thrift-to-deuk.js  thrift-to-deuk.js
scripts/lib/: upm-helpers.js
scripts/schemas/: pipeline.profile.schema.json
src/: deukpackVersion.ts  index.ts
src/__tests__/: SecurityChecks.test.ts
src/ai/: AiContextGenerator.ts
src/ast/: DeukPackASTBuilder.ts  DeukPackASTResolver.ts
src/codegen/: CSharpGenerator.ts  CodeGenerator.ts  CppGenerator.ts  DeukPackCodec.cs  DeukPackSerializationWarnings.cs  DeukPackSerializer.cs  DeukPackThriftCompat.cs  DpBinaryProtocol.cs  DpDeukJsonProtocol.cs  DpDeukYamlProtocol.cs  DpExcelProtocol.cs  DpJsonProtocol.cs  DpPackProtocol.cs  DpProtocolCore.cs  DpProtocolLibrary.cs  DpProtocolUtil.cs  ElixirGenerator.ts  HighPerformanceCSharpGenerator.ts  JavaGenerator.ts  PythonGenerator.ts  RustGenerator.ts  TBinaryProtocol.cs  TypeScriptGenerator.ts  UnityCompatibleGenerator.cs  WireProfileSubset.ts  codegenTemplateHost.ts  embeddedStructSchema.ts  templateRender.ts
src/core/: DeukPackCodec.ts  DeukPackEngine.ts  DeukPackGenerator.ts  DeukParser.ts  IdlLoadContext.ts  IdlParser.ts  ProtoParser.ts  parseDeukNumericLiteral.ts
src/lexer/: DeukLexer.ts  IdlLexer.ts
src/meta/: DeukTableManager.cs  IDeukMetaDecryptor.cs
src/native/: NativeDeukPackCodec.ts  NativeDeukPackEngine.cpp  NativeDeukPackEngine.ts
src/openapi/: OpenApiGenerator.ts  OpenApiParser.ts  OpenApiTypes.ts
src/proto/: ProtoASTBuilder.ts  ProtoLexer.ts  ProtoTypes.ts
src/protocols/: BinaryProtocol.ts  BinaryReader.ts  BinaryWriter.ts  CompactProtocol.ts  ExcelUtils.ts  JsonProtocol.ts  PackProtocol.ts  ProtobufProtocol.ts  SerializationWarnings.ts  TBinaryProtocol.ts  TCompactProtocol.ts  ThriftProtocol.h  WireProtocol.ts  ZeroCopyProtocol.ts
src/schema-io/: DelimitedSchema.ts  ExcelSchema.ts  JsonSchema.ts  ProtoSchemaEmit.ts  ThriftSchemaEmit.ts
src/serialization/: ExcelObjectReader.ts  WireDeserializer.ts  WireSerializer.ts  interopStructWireCodec.ts  packStructWire.ts  protoInteropWireCodec.ts  wireDefaults.ts  wireTags.ts
src/types/: DeukPackTypes.ts
src/utils/: DeukPackASTUtils.ts  EndianUtils.ts  PathUtils.ts  PerformanceMonitor.ts
styles/: palette.css  theme-base.css  theme-variables.css  typography.css
upm/: package.json
vscode-extension/: .vscodeignore  LICENSE  README.ko.md  README.md  deuk-idl-0.1.0.vsix  package-lock.json  package.json  sample.deuk
vscode-extension/language-configuration/: thrift.language-configuration.json
vscode-extension/src/: deukFormatter.ts  (+3 more)
(+168 files in other folders)
